--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "homepage": "https://ruckim.github.io/robofriends",
   "dependencies": {
+    "@types/jest": "^24.0.19",
+    "@types/node": "^12.11.7",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
+    "@types/redux": "^3.6.0",
+    "create-react-app": "^3.2.0",
     "gh-pages": "^2.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -12,7 +18,8 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "tachyons": "^4.11.1"
+    "tachyons": "^4.11.1",
+    "typescript": "^3.6.4"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -38,6 +45,9 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.19.0",
+    "moxios": "^0.4.0",
+    "nock": "^11.4.0",
     "react-test-renderer": "^16.10.2",
     "redux-mock-store": "^1.5.3"
   }
