--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/redux": "^3.6.0",
     "create-react-app": "^3.2.0",
     "gh-pages": "^2.1.1",
-    "react": "^16.10.2",
+    "react": "^16.3.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
@@ -26,7 +26,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --updateSnapshot && react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -48,7 +48,7 @@
     "axios": "^0.19.0",
     "moxios": "^0.4.0",
     "nock": "^11.4.0",
-    "react-test-renderer": "^16.10.2",
+    "react-test-renderer": "^16.3.2",
     "redux-mock-store": "^1.5.3"
   }
 }
