--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test -u",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
