--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,3 +12,9 @@ jobs:
     steps:
       - checkout
       - run: echo "Double trouble"
+  workflows:
+    version: 2
+    bobby_sally:
+      jobs:
+        - bobby
+        - sally
