--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@types/node": "^12.11.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
+    "@types/react-redux": "^7.1.5",
     "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.7",
     "create-react-app": "^3.2.0",
     "gh-pages": "^2.1.1",
     "react": "^16.3.2",
