--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/redux-logger": "^3.0.7",
     "create-react-app": "^3.2.0",
     "gh-pages": "^2.1.1",
+    "husky": "^3.1.0",
+    "pretty-quick": "^2.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
@@ -29,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test -u",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "precommit": "pretty-quick --staged"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,6 +53,7 @@
     "axios": "^0.19.0",
     "moxios": "^0.4.0",
     "nock": "^11.4.0",
+    "prettier": "1.19.1",
     "react-test-renderer": "^16.3.2",
     "redux-mock-store": "^1.5.3"
   }
